# desafio_django

./: .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml  requirements.txt
api/: admin.py  apps.py  middleware.py  models.py  schemas.py  signals.py  tasks.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py  0002_modelranking.py  0002_remove_modelquestion_exam_modelquestion_exam.py  0003_rename_participants_modelranking_participant_and_more.py
api/routers/: answer.py  auth.py  choice.py  exam.py  participation.py  question.py  ranking.py  user.py
api/tests/: test_answers.py  test_choices.py  test_exams.py  test_participations.py  test_questions.py  test_rankings.py  test_users.py
core/: __init__.py  celery.py  settings.py
exam_manager/: __init__.py  celery.py  settings.py  urls.py
