[tool.poetry]
name = "django-desafio-fractal"
version = "0.1.0"
description = "API RESTful para gerenciamento de provas com django"
authors = ["Hennan H. Falcão <hennan.falcao@cs.unipe.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5"
django-ninja = "1.3"
djangorestframework = "^3.15.2"
redis = "^5.2.0"
celery = "^5.4.0"
django-cors-headers = "^4.6.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
