[tool.poetry]
name = "desafio-django"
version = "0.1.0"
description = ""
authors = ["Hennan H. Falcão <hennan.falcao@cs.unipe.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
celery = "^5.4.0"
redis = "^5.2.0"
email-validator = "^2.2.0"
django-ninja-jwt = "^5.3.5"
djangorestframework-jwt = "^1.11.0"
pydantic = {extras = ["email"], version = "^2.10.2"}
django-redis = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
